--- a/index.html
+++ b/index.html
@@ -1,69 +1,148 @@
 <!DOCTYPE html>
 <html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Кафедра Комп'ютерних Наук</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="card">
-    <div class="header">
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="card">
+      <div class="header">
         <div class="text-content">
-            <h2>Завідувач кафедри комп'ютерних наук<br>та інженерії програмного забезпечення</h2>
-            <h1>Ульяновська Юлія<br>Вікторівна</h1>
-            <ul class="details">
-                <li>Кандидат технічних наук</li>
-                <li>Доцент</li>
-                <li>kafedra.kn.ta.ipz@gmail.com</li>
-            </ul>
+          <h2>
+            Завідувач кафедри комп'ютерних наук<br />та інженерії програмного
+            забезпечення
+          </h2>
+          <h1>Ульяновська Юлія<br />Вікторівна</h1>
+          <ul class="details">
+            <li>Кандидат технічних наук</li>
+            <li>Доцент</li>
+            <li>kafedra.kn.ta.ipz@gmail.com</li>
+          </ul>
         </div>
         <div class="image-content">
-            <img src="photo.png" alt="Ульяновська Юлія Вікторівна" class="profile-photo">
+          <img
+            src="photo.png"
+            alt="Ульяновська Юлія Вікторівна"
+            class="profile-photo"
+          />
         </div>
-    </div>
+      </div>
 
-        
-<div class="description">
-        <p>Кафедра є випускною за спеціальностями F2 «Інженерія програмного забезпечення» та F3 «Комп’ютерні науки» (денна та заочна форми навчання, освітні ступені «Бакалавр», «Магістр»).
-          Кафедра налічує 12 викладачів, серед них – 1 доктор наук, 8 кандидатів наук, 2 старших викладача, 1 викладач.</p>
-</div> 
-        <div class="links">
-            <ul>
-                <li><a href="https://drive.google.com/file/d/1tN9gdLR_fwHVOYl7VIVP9bo-tgo1oNjH/view?usp=sharing">Положення про кафедру</a></li>
-                <li><a href="https://drive.google.com/file/d/1sgx1UNs7mUsrYudAYFZEJ4HkFVMDDB12/view">Про спеціальність F2 інженерія програмного забезпечення</a></li>
-                <li><a href="https://drive.google.com/file/d/1WUwATz4GCztDJOWjWnMeXcGW7a7VtqfE/view">Про спеціальність F3 комп'ютерні науки</a></li>
-            </ul>
-        </div>
+      <div class="description">
+        <p>
+          Кафедра є випускною за спеціальностями F2 «Інженерія програмного
+          забезпечення» та F3 «Комп’ютерні науки» (денна та заочна форми
+          навчання, освітні ступені «Бакалавр», «Магістр»). Кафедра налічує 12
+          викладачів, серед них – 1 доктор наук, 8 кандидатів наук, 2 старших
+          викладача, 1 викладач.
+        </p>
+      </div>
+      <div class="links">
+        <ul>
+          <li>
+            <a
+              href="https://drive.google.com/file/d/1tN9gdLR_fwHVOYl7VIVP9bo-tgo1oNjH/view?usp=sharing"
+              >Положення про кафедру</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://drive.google.com/file/d/1sgx1UNs7mUsrYudAYFZEJ4HkFVMDDB12/view"
+              >Про спеціальність F2 інженерія програмного забезпечення</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://drive.google.com/file/d/1WUwATz4GCztDJOWjWnMeXcGW7a7VtqfE/view"
+              >Про спеціальність F3 комп'ютерні науки</a
+            >
+          </li>
+        </ul>
+      </div>
 
-        <div class="customers">
-            <h3>Перелік замовників:</h3>
-            <ul>
-                <li>Державна митна служба України</li>
-                <li>Підприємства та організації - державні, комерційні та приватні фірмі і підприємства, які займаються розробкою та експлуатацією інформаційних систем</li>
-            </ul>
-        </div>
+      <div class="customers">
+        <h3>Перелік замовників:</h3>
+        <ul>
+          <li>Державна митна служба України</li>
+          <li>
+            Підприємства та організації - державні, комерційні та приватні фірмі
+            і підприємства, які займаються розробкою та експлуатацією
+            інформаційних систем
+          </li>
+        </ul>
+      </div>
 
-        <div class="contacts">
-            <p><strong>Контакт:</strong> м. Дніпро, вул. В. Вернадського, 2/4, каб.№423; тел. 756-05-60</p>
-            <p><a href="https://www.facebook.com/computer.science.UMSF/">Facebook</a></p>
-        </div>
-        <div class="education">
-          <h3>Освітня діяльність</h3>
-          <div class="disciplines">
-              <div class="discipline"><a href="https://drive.google.com/drive/folders/1538pl4-68cl1wGZPw9L9nZbnIrsM5eI4">ОПП «Інженерія програмного забезпечення» МАГІСТР</a></div>
-              <div class="discipline"><a href="https://drive.google.com/drive/folders/1nUKb_iZEf_CNYx234A7J4VTk047sIJm5">ОПП «Комп’ютерні науки» Магістр</a></div>
-              <div class="discipline"><a href="https://drive.google.com/drive/folders/1Juge4XLhtkMgcUedq1n0PuOoDhL-Dkdt?usp=sharing">ОПП «Інженерія програмного забезпечення» БАКАЛАВР</a></div>
-              <div class="discipline"><a href="https://drive.google.com/drive/folders/1Ps7HZ37-wHonkOFkOKdE8gbcZ2blh8KN?usp=sharing">ОПП «Комп’ютерні науки»  БАКАЛАВР</a></div>
+      <div class="contacts">
+        <p>
+          <strong>Контакт:</strong> м. Дніпро, вул. В. Вернадського, 2/4,
+          каб.№423; тел. 756-05-60
+        </p>
+        <p>
+          <a href="https://www.facebook.com/computer.science.UMSF/">Facebook</a>
+        </p>
+      </div>
+      <div class="education">
+        <h3>Освітня діяльність</h3>
+        <div class="disciplines">
+          <div class="discipline">
+            <a
+              href="https://drive.google.com/drive/folders/1538pl4-68cl1wGZPw9L9nZbnIrsM5eI4"
+              >ОПП «Інженерія програмного забезпечення» МАГІСТР</a
+            >
           </div>
+          <div class="discipline">
+            <a
+              href="https://drive.google.com/drive/folders/1nUKb_iZEf_CNYx234A7J4VTk047sIJm5"
+              >ОПП «Комп’ютерні науки» Магістр</a
+            >
+          </div>
+          <div class="discipline">
+            <a
+              href="https://drive.google.com/drive/folders/1Juge4XLhtkMgcUedq1n0PuOoDhL-Dkdt?usp=sharing"
+              >ОПП «Інженерія програмного забезпечення» БАКАЛАВР</a
+            >
+          </div>
+          <div class="discipline">
+            <a
+              href="https://drive.google.com/drive/folders/1Ps7HZ37-wHonkOFkOKdE8gbcZ2blh8KN?usp=sharing"
+              >ОПП «Комп’ютерні науки» БАКАЛАВР</a
+            >
+          </div>
+        </div>
       </div>
       <div class="scientific-activity">
         <h3>Наукова діяльність</h3>
         <div class="research-section">
-          <div class="description-box">На кафедрі проводиться дослідження за науковою темою «Моделювання об’єктів, процесів та систем в умовах визначеності, ризику, невизначеності та багатокритеріальності з використанням сучасних інформаційних технологій», № держреєстрації 0125U001568 – Керівник – доктор технічних наук Яковенко Вадим Олександрович. Головна мета - Розробка теоретичних і практичних засад використання математичних методів та інформаційних технологій для систем моделювання даних і процесів та розробка технологій з удосконалення процесів моделювання, прогнозування в різних сферах, використання результатів для прийняття управлінських рішень. У розробці цієї теми беруть участь як співробітники кафедри так і здобувачі вищої освіти спеціальностей 121 - інженерія програмного забезпечення та 122 - комп’ютерні науки</div>
+          <div class="description-box">
+            На кафедрі проводиться дослідження за науковою темою «Моделювання
+            об’єктів, процесів та систем в умовах визначеності, ризику,
+            невизначеності та багатокритеріальності з використанням сучасних
+            інформаційних технологій», № держреєстрації 0125U001568 – Керівник –
+            доктор технічних наук Яковенко Вадим Олександрович. Головна мета -
+            Розробка теоретичних і практичних засад використання математичних
+            методів та інформаційних технологій для систем моделювання даних і
+            процесів та розробка технологій з удосконалення процесів
+            моделювання, прогнозування в різних сферах, використання результатів
+            для прийняття управлінських рішень. У розробці цієї теми беруть
+            участь як співробітники кафедри так і здобувачі вищої освіти
+            спеціальностей 121 - інженерія програмного забезпечення та 122 -
+            комп’ютерні науки
+          </div>
           <div class="right-boxes">
-            <div class="small-box"><a href="https://drive.google.com/file/d/1IyUQyvRdxTmF_y3DmHz-QoxyGCJ-OmeA/view?usp=drive_link">Науково-дослідна робота кафедри</a></div>
-            <div class="small-box"><a href="https://drive.google.com/file/d/1-TATfg-LyUBQgCaJU0PfBtIidUGqJACn/view?usp=drive_link">Студентські гуртки</a></div>
+            <div class="small-box">
+              <a
+                href="https://drive.google.com/file/d/1IyUQyvRdxTmF_y3DmHz-QoxyGCJ-OmeA/view?usp=drive_link"
+                >Науково-дослідна робота кафедри</a
+              >
+            </div>
+            <div class="small-box">
+              <a
+                href="https://drive.google.com/file/d/1-TATfg-LyUBQgCaJU0PfBtIidUGqJACn/view?usp=drive_link"
+                >Студентські гуртки</a
+              >
+            </div>
           </div>
         </div>
       </div>
@@ -71,98 +150,98 @@
         <h3>НАШІ ПАРТНЕРИ</h3>
         <div class="partners-photos">
           <div class="partner-photo">
-            <img src="photo1.png" alt="Партнер 1">
+            <img src="photo1.png" alt="Партнер 1" />
           </div>
           <div class="partner-photo">
-            <img src="photo2.png" alt="Партнер 2">
+            <img src="photo2.png" alt="Партнер 2" />
           </div>
           <div class="partner-photo">
-            <img src="photo3.png" alt="Партнер 3">
+            <img src="photo3.png" alt="Партнер 3" />
           </div>
         </div>
       </div>
     </div>
-<script>
-  // Функція обходу DOM з callback
-  function traverseDOM(node, callback) {
-    callback(node,() => {
-        const next = getNextNode(node);
-        if (next) {
-          traverseDOM(next, callback);
+    <script>
+      // Функція обходу DOM з callback
+      function traverseDOM(node, callback) {
+        callback(
+          node,
+          () => {
+            const next = getNextNode(node);
+            if (next) {
+              traverseDOM(next, callback);
+            }
+          },
+          () => {
+            const prev = getPreviousNode(node);
+            if (prev) {
+              traverseDOM(prev, callback);
+            }
+          }
+        );
+      }
+
+      // Отримує наступний вузол у дереві
+      function getNextNode(node) {
+        if (node.firstElementChild) {
+          return node.firstElementChild;
         }
-      },
-      () => {
-        const prev = getPreviousNode(node);
-        if (prev) {
-          traverseDOM(prev, callback);
+        while (node) {
+          if (node.nextElementSibling) {
+            return node.nextElementSibling;
+          }
+          node = node.parentElement;
+        }
+        return null;
+      }
+
+      // Отримує попередній вузол у дереві
+      function getPreviousNode(node) {
+        if (node.previousElementSibling) {
+          node = node.previousElementSibling;
+          while (node.lastElementChild) {
+            node = node.lastElementChild;
+          }
+          return node;
+        }
+        return node.parentElement;
+      }
+
+      // Callback-функція взаємодії з користувачем
+      function userInteractionCallback(node, next, back) {
+        const content = node.textContent.trim() || "Порожній вузол";
+        let message = `Вміст вузла: ${content}\n`;
+
+        const hasNext = getNextNode(node) !== null;
+        const hasPrev = getPreviousNode(node) !== null;
+
+        if (hasNext && hasPrev) {
+          message += "Перейти далі? (OK) / Назад? (Скасувати)";
+          if (confirm(message)) {
+            next();
+          } else {
+            back();
+          }
+        } else if (hasNext) {
+          message += "Перейти далі? (OK) / Вийти? (Скасувати)";
+          if (confirm(message)) {
+            next();
+          }
+        } else if (hasPrev) {
+          message += "Назад? (OK) / Вийти? (Скасувати)";
+          if (confirm(message)) {
+            back();
+          }
+        } else {
+          alert("Це останній вузол. Завершення.");
         }
       }
-    );
-  }
 
-  // Отримує наступний вузол у дереві
-  function getNextNode(node) {
-    if (node.firstElementChild) {
-      return node.firstElementChild;
-    }
-    while (node) {
-      if (node.nextElementSibling) {
-        return node.nextElementSibling;
-      }
-      node = node.parentElement;
-    }
-    return null;
-  }
-
-  // Отримує попередній вузол у дереві
-  function getPreviousNode(node) {
-    if (node.previousElementSibling) {
-      node = node.previousElementSibling;
-      while (node.lastElementChild) {
-        node = node.lastElementChild;
-      }
-      return node;
-    }
-    return node.parentElement;
-  }
-
-  // Callback-функція взаємодії з користувачем
-  function userInteractionCallback(node, next, back) {
-    const content = node.textContent.trim() || "Порожній вузол";
-    let message = `Вміст вузла: ${content}\n`;
-
-    const hasNext = getNextNode(node) !== null;
-    const hasPrev = getPreviousNode(node) !== null;
-
-    if (hasNext && hasPrev) {
-      message += "Перейти далі? (OK) / Назад? (Скасувати)";
-      if (confirm(message)) {
-        next();
-      } else {
-        back();
-      }
-    } else if (hasNext) {
-      message += "Перейти далі? (OK) / Вийти? (Скасувати)";
-      if (confirm(message)) {
-        next();
-      }
-    } else if (hasPrev) {
-      message += "Назад? (OK) / Вийти? (Скасувати)";
-      if (confirm(message)) {
-        back();
-      }
-    } else {
-      alert("Це останній вузол. Завершення.");
-    }
-  }
-
-  // Запускаємо після завантаження сторінки
-  window.addEventListener("DOMContentLoaded", () => {
-    const startNode = document.body;
-    traverseDOM(startNode, userInteractionCallback);
-  });
-</script>
-
-    
-</body>
+      // Запускаємо після завантаження сторінки
+      window.addEventListener("DOMContentLoaded", () => {
+        const startNode = document.body;
+        traverseDOM(startNode, userInteractionCallback);
+      });
+    </script>
+  </body>
 </html>
